update: Extract GridGraph classe from notebook

--- a/multi_robot_target_search.ipynb
+++ b/multi_robot_target_search.ipynb
@@ -13,26 +13,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 57,
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import networkx as nx\n",
     "import matplotlib.pyplot as plt\n",
-    "from Agent import Agent"
+    "from Agent import Agent\n",
+    "from GridGraph import GridGraph"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T10:08:02.635852388Z",
-     "start_time": "2024-10-18T10:08:02.581277945Z"
+     "end_time": "2024-10-18T10:12:32.057290922Z",
+     "start_time": "2024-10-18T10:12:31.827969245Z"
     }
    },
    "id": "9a691c4742471275"
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 58,
    "outputs": [],
    "source": [
     "np.random.seed(12345)"
@@ -40,8 +41,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T10:08:02.690786377Z",
-     "start_time": "2024-10-18T10:08:02.588373309Z"
+     "end_time": "2024-10-18T10:12:32.185172764Z",
+     "start_time": "2024-10-18T10:12:31.859988824Z"
     }
    },
    "id": "21a259cd93fc0256"
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 59,
    "outputs": [],
    "source": [
     "N = 3 # number of agents\n",
@@ -83,8 +84,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T10:08:02.719851941Z",
-     "start_time": "2024-10-18T10:08:02.604496050Z"
+     "end_time": "2024-10-18T10:12:32.208074122Z",
+     "start_time": "2024-10-18T10:12:31.860517390Z"
     }
    },
    "id": "e797cec0da115198"
@@ -92,89 +93,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Networkx package is used to represent graphs:"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "8729cb9150026e5b"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "outputs": [],
-   "source": [
-    "class GridGraph:\n",
-    "    def __init__(self, n, m):\n",
-    "        \"\"\"Constructor to initialize the grid dimensions and create the graph.\"\"\"\n",
-    "        self.n = n  # Number of rows\n",
-    "        self.m = m  # Number of columns\n",
-    "        self.graph = self._create_graph()\n",
-    "        self.node_positions = self._create_node_positions()\n",
     "\n",
-    "    def _create_graph(self):\n",
-    "        \"\"\"Private method to create the grid graph.\"\"\"\n",
-    "        G = nx.Graph()  # Create an undirected graph\n",
-    "\n",
-    "        # Add nodes and edges based on the grid\n",
-    "        for i in range(self.n):\n",
-    "            for j in range(self.m):\n",
-    "                node = i * self.m + j\n",
-    "                G.add_node(node)\n",
-    "\n",
-    "                # Connect to neighbors: above, below, left, right\n",
-    "                if i > 0:  # Above\n",
-    "                    above = (i - 1) * self.m + j\n",
-    "                    G.add_edge(node, above)\n",
-    "                if i < self.n - 1:  # Below\n",
-    "                    below = (i + 1) * self.m + j\n",
-    "                    G.add_edge(node, below)\n",
-    "                if j > 0:  # Left\n",
-    "                    left = i * self.m + (j - 1)\n",
-    "                    G.add_edge(node, left)\n",
-    "                if j < self.m - 1:  # Right\n",
-    "                    right = i * self.m + (j + 1)\n",
-    "                    G.add_edge(node, right)\n",
-    "\n",
-    "        return G\n",
-    "\n",
-    "    def _create_node_positions(self):\n",
-    "        \"\"\"Private method to create a dictionary of node positions (i, j).\"\"\"\n",
-    "        positions = {}\n",
-    "        for i in range(self.n):\n",
-    "            for j in range(self.m):\n",
-    "                node = i * self.m + j\n",
-    "                positions[node] = (i, j)\n",
-    "        return positions\n",
-    "    \n",
-    "    def edges(self):\n",
-    "        return self.graph.edges()\n",
-    "    \n",
-    "    def get_position(self, node):\n",
-    "        \"\"\"Method to get the (i, j) position of a node.\"\"\"\n",
-    "        return self.node_positions.get(node, None)\n",
-    "\n",
-    "    def plot_graph(self):\n",
-    "        \"\"\"Method to plot the graph using matplotlib.\"\"\"\n",
-    "        # Define the node positions in a grid layout\n",
-    "        pos = {i * self.m + j: (j, -i) for i in range(self.n) for j in range(self.m)}\n",
-    "\n",
-    "        # Draw the graph\n",
-    "        nx.draw(self.graph, pos, with_labels=True, node_size=500, node_color=\"lightblue\", font_size=10)\n",
-    "        plt.show()\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-10-18T10:08:02.723939846Z",
-     "start_time": "2024-10-18T10:08:02.660750517Z"
-    }
-   },
-   "id": "efde5c8550aef2cc"
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
     "Graph initialization:"
    ],
    "metadata": {
@@ -184,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 60,
    "outputs": [
     {
      "data": {
@@ -202,15 +121,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T10:08:02.751765227Z",
-     "start_time": "2024-10-18T10:08:02.660993503Z"
+     "end_time": "2024-10-18T10:12:32.385290Z",
+     "start_time": "2024-10-18T10:12:31.870603067Z"
     }
    },
    "id": "a4348ec77ee2bbdf"
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 61,
    "outputs": [],
    "source": [
     "def plot_graph_with_agents(graph, agent_list):\n",
@@ -237,8 +156,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T10:08:02.826044919Z",
-     "start_time": "2024-10-18T10:08:02.740128364Z"
+     "end_time": "2024-10-18T10:12:32.385933762Z",
+     "start_time": "2024-10-18T10:12:32.129231679Z"
     }
    },
    "id": "8414b2c4fd89405f"
@@ -255,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 62,
    "outputs": [
     {
      "name": "stdout",
@@ -275,8 +194,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T10:08:02.826673963Z",
-     "start_time": "2024-10-18T10:08:02.785006267Z"
+     "end_time": "2024-10-18T10:12:32.386729512Z",
+     "start_time": "2024-10-18T10:12:32.129859382Z"
     }
    },
    "id": "2532fb94e0c2ffb2"
@@ -293,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 63,
    "outputs": [],
    "source": [
     "def build_transition_matrix(graph):\n",
@@ -331,15 +250,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T10:08:02.826952812Z",
-     "start_time": "2024-10-18T10:08:02.785295380Z"
+     "end_time": "2024-10-18T10:12:32.387273783Z",
+     "start_time": "2024-10-18T10:12:32.136563442Z"
     }
    },
    "id": "1f934030ca71ef6f"
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 64,
    "outputs": [],
    "source": [
     "P = build_transition_matrix(grid_graph)"
@@ -347,8 +266,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T10:08:02.827169893Z",
-     "start_time": "2024-10-18T10:08:02.785476740Z"
+     "end_time": "2024-10-18T10:12:32.387700642Z",
+     "start_time": "2024-10-18T10:12:32.147937264Z"
     }
    },
    "id": "118135f0be706b67"
@@ -365,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 65,
    "outputs": [
     {
      "name": "stdout",
@@ -398,15 +317,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T10:08:02.827750955Z",
-     "start_time": "2024-10-18T10:08:02.785588190Z"
+     "end_time": "2024-10-18T10:12:32.388598493Z",
+     "start_time": "2024-10-18T10:12:32.163247916Z"
     }
    },
    "id": "88afa5aff6a1a6d0"
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 66,
    "outputs": [],
    "source": [
     "def check_consensus(agents_array, ref_information_state, eps):\n",
@@ -418,15 +337,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T10:08:02.828104138Z",
-     "start_time": "2024-10-18T10:08:02.796147865Z"
+     "end_time": "2024-10-18T10:12:32.389093756Z",
+     "start_time": "2024-10-18T10:12:32.176089508Z"
     }
    },
    "id": "f199c3bc4cff7a8"
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 67,
    "outputs": [],
    "source": [
     "def getNeighbors(_agent, _agents):\n",
@@ -440,15 +359,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T10:08:02.903188895Z",
-     "start_time": "2024-10-18T10:08:02.805568963Z"
+     "end_time": "2024-10-18T10:12:32.635837285Z",
+     "start_time": "2024-10-18T10:12:32.193860994Z"
     }
    },
    "id": "8830c00684c21591"
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 68,
    "outputs": [],
    "source": [
     "def build_graph_laplacian(actors):\n",
@@ -468,15 +387,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T10:08:02.912060588Z",
-     "start_time": "2024-10-18T10:08:02.848842151Z"
+     "end_time": "2024-10-18T10:12:32.636714744Z",
+     "start_time": "2024-10-18T10:12:32.237074614Z"
     }
    },
    "id": "be74ee92d3b0a06d"
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 69,
    "outputs": [],
    "source": [
     "def build_augmented_information_state_vector(actors):\n",
@@ -526,15 +445,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T10:08:02.912395987Z",
-     "start_time": "2024-10-18T10:08:02.849107741Z"
+     "end_time": "2024-10-18T10:12:32.637345427Z",
+     "start_time": "2024-10-18T10:12:32.237441098Z"
     }
    },
    "id": "3f79b8f7d2748f7c"
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 70,
    "outputs": [],
    "source": [
     "def __cumulativeTransformer(p0:np.array)->np.array:\n",
@@ -568,15 +487,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T10:08:02.912703776Z",
-     "start_time": "2024-10-18T10:08:02.849388029Z"
+     "end_time": "2024-10-18T10:12:32.637902795Z",
+     "start_time": "2024-10-18T10:12:32.237719277Z"
     }
    },
    "id": "1ea77d57b65e2a62"
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 71,
    "outputs": [
     {
      "name": "stdout",
@@ -592,15 +511,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T10:08:02.913915091Z",
-     "start_time": "2024-10-18T10:08:02.853293639Z"
+     "end_time": "2024-10-18T10:12:32.638943916Z",
+     "start_time": "2024-10-18T10:12:32.251215259Z"
     }
    },
    "id": "eaae6341bcb8c14d"
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 72,
    "outputs": [],
    "source": [
     "class RandomWalkController:\n",
@@ -669,8 +588,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T10:08:02.914150164Z",
-     "start_time": "2024-10-18T10:08:02.896862467Z"
+     "end_time": "2024-10-18T10:12:32.683648421Z",
+     "start_time": "2024-10-18T10:12:32.293418077Z"
     }
    },
    "id": "321981fbee05d4d6"
@@ -687,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 73,
    "outputs": [
     {
      "name": "stdout",
@@ -30707,8 +30626,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T10:08:04.456214689Z",
-     "start_time": "2024-10-18T10:08:02.897085741Z"
+     "end_time": "2024-10-18T10:12:36.094435156Z",
+     "start_time": "2024-10-18T10:12:32.301807104Z"
     }
    },
    "id": "1cfd91c6fb7708f4"
