--- a/multi_robot_target_search.ipynb
+++ b/multi_robot_target_search.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -25,15 +25,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T10:12:32.057290922Z",
-     "start_time": "2024-10-18T10:12:31.827969245Z"
+     "end_time": "2024-10-18T11:55:23.689746760Z",
+     "start_time": "2024-10-18T11:55:23.242861814Z"
     }
    },
    "id": "9a691c4742471275"
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "np.random.seed(12345)"
@@ -41,8 +41,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T10:12:32.185172764Z",
-     "start_time": "2024-10-18T10:12:31.859988824Z"
+     "end_time": "2024-10-18T11:55:23.732764712Z",
+     "start_time": "2024-10-18T11:55:23.732433497Z"
     }
    },
    "id": "21a259cd93fc0256"
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "N = 3 # number of agents\n",
@@ -84,8 +84,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T10:12:32.208074122Z",
-     "start_time": "2024-10-18T10:12:31.860517390Z"
+     "end_time": "2024-10-18T11:55:23.733032973Z",
+     "start_time": "2024-10-18T11:55:23.732645594Z"
     }
    },
    "id": "e797cec0da115198"
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
@@ -121,15 +121,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T10:12:32.385290Z",
-     "start_time": "2024-10-18T10:12:31.870603067Z"
+     "end_time": "2024-10-18T11:55:23.810738515Z",
+     "start_time": "2024-10-18T11:55:23.732731615Z"
     }
    },
    "id": "a4348ec77ee2bbdf"
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "def plot_graph_with_agents(graph, agent_list):\n",
@@ -156,8 +156,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T10:12:32.385933762Z",
-     "start_time": "2024-10-18T10:12:32.129231679Z"
+     "end_time": "2024-10-18T11:55:23.821349978Z",
+     "start_time": "2024-10-18T11:55:23.813280819Z"
     }
    },
    "id": "8414b2c4fd89405f"
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -194,8 +194,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T10:12:32.386729512Z",
-     "start_time": "2024-10-18T10:12:32.129859382Z"
+     "end_time": "2024-10-18T11:55:23.831895348Z",
+     "start_time": "2024-10-18T11:55:23.816593003Z"
     }
    },
    "id": "2532fb94e0c2ffb2"
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "def build_transition_matrix(graph):\n",
@@ -250,15 +250,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T10:12:32.387273783Z",
-     "start_time": "2024-10-18T10:12:32.136563442Z"
+     "end_time": "2024-10-18T11:55:23.886067764Z",
+     "start_time": "2024-10-18T11:55:23.829074505Z"
     }
    },
    "id": "1f934030ca71ef6f"
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "P = build_transition_matrix(grid_graph)"
@@ -266,8 +266,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T10:12:32.387700642Z",
-     "start_time": "2024-10-18T10:12:32.147937264Z"
+     "end_time": "2024-10-18T11:55:23.887071532Z",
+     "start_time": "2024-10-18T11:55:23.838363528Z"
     }
    },
    "id": "118135f0be706b67"
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
@@ -311,21 +311,20 @@
     "    initial_node = np.random.randint(0, S)\n",
     "    agent = Agent(i+1, initial_node)\n",
     "    agents.append(agent)\n",
-    "    print(agent)\n",
-    "    "
+    "    print(agent)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T10:12:32.388598493Z",
-     "start_time": "2024-10-18T10:12:32.163247916Z"
+     "end_time": "2024-10-18T11:55:23.887361274Z",
+     "start_time": "2024-10-18T11:55:23.884495235Z"
     }
    },
    "id": "88afa5aff6a1a6d0"
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "def check_consensus(agents_array, ref_information_state, eps):\n",
@@ -337,43 +336,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T10:12:32.389093756Z",
-     "start_time": "2024-10-18T10:12:32.176089508Z"
+     "end_time": "2024-10-18T11:55:23.887446425Z",
+     "start_time": "2024-10-18T11:55:23.884631573Z"
     }
    },
    "id": "f199c3bc4cff7a8"
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "outputs": [],
-   "source": [
-    "def getNeighbors(_agent, _agents):\n",
-    "    position = _agent.getPosition()\n",
-    "    neighbors = []\n",
-    "    for a in _agents:\n",
-    "        if a != _agent and a.getPosition() == position:\n",
-    "            neighbors.append(a)\n",
-    "    return neighbors"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-10-18T10:12:32.635837285Z",
-     "start_time": "2024-10-18T10:12:32.193860994Z"
-    }
-   },
-   "id": "8830c00684c21591"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "def build_graph_laplacian(actors):\n",
     "    matrix =  np.zeros((N, N))\n",
     "    for ii in range(N):\n",
-    "        matrix[ii][ii] = len(getNeighbors(actors[ii], actors))\n",
+    "        matrix[ii][ii] = len(actors[ii].getNeighbors(actors))\n",
     "    for j in range(N):\n",
     "        for l in range(N):\n",
     "            if j != l:\n",
@@ -387,15 +364,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T10:12:32.636714744Z",
-     "start_time": "2024-10-18T10:12:32.237074614Z"
+     "end_time": "2024-10-18T11:55:23.900685091Z",
+     "start_time": "2024-10-18T11:55:23.884783397Z"
     }
    },
    "id": "be74ee92d3b0a06d"
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "def build_augmented_information_state_vector(actors):\n",
@@ -445,15 +422,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T10:12:32.637345427Z",
-     "start_time": "2024-10-18T10:12:32.237441098Z"
+     "end_time": "2024-10-18T11:55:23.946545587Z",
+     "start_time": "2024-10-18T11:55:23.899620743Z"
     }
    },
    "id": "3f79b8f7d2748f7c"
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "def __cumulativeTransformer(p0:np.array)->np.array:\n",
@@ -487,15 +464,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T10:12:32.637902795Z",
-     "start_time": "2024-10-18T10:12:32.237719277Z"
+     "end_time": "2024-10-18T11:55:23.946913276Z",
+     "start_time": "2024-10-18T11:55:23.944571215Z"
     }
    },
    "id": "1ea77d57b65e2a62"
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stdout",
@@ -511,15 +488,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T10:12:32.638943916Z",
-     "start_time": "2024-10-18T10:12:32.251215259Z"
+     "end_time": "2024-10-18T11:55:23.947223990Z",
+     "start_time": "2024-10-18T11:55:23.944723073Z"
     }
    },
    "id": "eaae6341bcb8c14d"
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 16,
    "outputs": [],
    "source": [
     "class RandomWalkController:\n",
@@ -588,8 +565,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T10:12:32.683648421Z",
-     "start_time": "2024-10-18T10:12:32.293418077Z"
+     "end_time": "2024-10-18T11:55:23.947362050Z",
+     "start_time": "2024-10-18T11:55:23.944792431Z"
     }
    },
    "id": "321981fbee05d4d6"
@@ -606,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 17,
    "outputs": [
     {
      "name": "stdout",
@@ -30626,8 +30603,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T10:12:36.094435156Z",
-     "start_time": "2024-10-18T10:12:32.301807104Z"
+     "end_time": "2024-10-18T11:55:25.665530562Z",
+     "start_time": "2024-10-18T11:55:23.948086618Z"
     }
    },
    "id": "1cfd91c6fb7708f4"
