update: Extract DTMC utils methods

--- a/multi_robot_target_search.ipynb
+++ b/multi_robot_target_search.ipynb
@@ -13,25 +13,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from Agent import Agent\n",
-    "from GridGraph import GridGraph"
+    "from GridGraph import GridGraph\n",
+    "from DTMC_Utils import DTMC_Utils as utils"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T12:20:30.483651145Z",
-     "start_time": "2024-10-18T12:20:30.459048848Z"
+     "end_time": "2024-10-18T14:32:54.369654469Z",
+     "start_time": "2024-10-18T14:32:54.342563613Z"
     }
    },
    "id": "9a691c4742471275"
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "np.random.seed(12345)"
@@ -39,8 +40,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T12:20:30.541649893Z",
-     "start_time": "2024-10-18T12:20:30.462614164Z"
+     "end_time": "2024-10-18T14:32:54.380166828Z",
+     "start_time": "2024-10-18T14:32:54.347260338Z"
     }
    },
    "id": "21a259cd93fc0256"
@@ -48,16 +49,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Utility class to manage agents:"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "1ff9ac733820ab03"
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
+    "\n",
     "Experimental parameter:"
    ],
    "metadata": {
@@ -67,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "N = 3 # number of agents\n",
@@ -82,8 +74,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T12:20:30.543887772Z",
-     "start_time": "2024-10-18T12:20:30.528712225Z"
+     "end_time": "2024-10-18T14:32:54.425367286Z",
+     "start_time": "2024-10-18T14:32:54.358434884Z"
     }
    },
    "id": "e797cec0da115198"
@@ -101,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "outputs": [
     {
      "data": {
@@ -119,8 +111,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T12:20:30.584981803Z",
-     "start_time": "2024-10-18T12:20:30.528949350Z"
+     "end_time": "2024-10-18T14:32:54.440915615Z",
+     "start_time": "2024-10-18T14:32:54.411577707Z"
     }
    },
    "id": "a4348ec77ee2bbdf"
@@ -137,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "outputs": [
     {
      "name": "stdout",
@@ -157,8 +149,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T12:20:30.589243315Z",
-     "start_time": "2024-10-18T12:20:30.585924035Z"
+     "end_time": "2024-10-18T14:32:54.447031573Z",
+     "start_time": "2024-10-18T14:32:54.442237312Z"
     }
    },
    "id": "2532fb94e0c2ffb2"
@@ -175,62 +167,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "outputs": [],
    "source": [
-    "def build_transition_matrix(graph):\n",
-    "    \"\"\" Method to build the transition matrix with an equal probability to go up, down, left or right in the grid\"\"\"\n",
-    "    t_m = np.zeros([S,S])\n",
-    "    edges = graph.edges()\n",
-    "    for row in range(S):\n",
-    "        for col in range(S):\n",
-    "            if row!=col and (row, col) in edges:\n",
-    "                t_m[row][col] = 1/len([edge for edge in edges if edge[0] == row or edge[1] == row])\n",
-    "    defined_check(t_m)\n",
-    "    return t_m\n",
-    "    \n",
-    "def defined_check(M: np.matrix)->None:\n",
-    "    \"\"\" It will check if the given transition matrix is well-defined \"\"\"\n",
-    "    #Check if the matrix is squared\n",
-    "    if np.shape(M)[0]!=np.shape(M)[1]:\n",
-    "       raise RuntimeError(\"Number of rows is different from the number of columns\")\n",
-    "\n",
-    "    for i in range(len(M)):\n",
-    "        s = 0\n",
-    "        \n",
-    "        for j in range(len(M)):\n",
-    "            #Check if the values are actualy probabilities\n",
-    "            if M[i,j]>1 or M[i,j]<0:\n",
-    "                raise RuntimeError(\"An element of the transition matrix is not a probability: \"+str(i)+\",\"+str(j))\n",
-    "            \n",
-    "            s = s + M[i,j]\n",
-    "\n",
-    "        #Check if the rows sum up to 1\n",
-    "        if s-1>0.00000001:\n",
-    "            raise RuntimeError(\"The matrix is not well defined. Goes over 1 in the row \"+str(i)+\" with a value \"+str(s))\n",
-    "         "
+    "P = utils.build_transition_matrix(grid_graph, S)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T12:20:30.680476637Z",
-     "start_time": "2024-10-18T12:20:30.592712540Z"
-    }
-   },
-   "id": "1f934030ca71ef6f"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "outputs": [],
-   "source": [
-    "P = build_transition_matrix(grid_graph)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-10-18T12:20:30.683425523Z",
-     "start_time": "2024-10-18T12:20:30.636648697Z"
+     "end_time": "2024-10-18T14:32:54.514865106Z",
+     "start_time": "2024-10-18T14:32:54.446269087Z"
     }
    },
    "id": "118135f0be706b67"
@@ -247,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "outputs": [
     {
      "name": "stdout",
@@ -279,15 +225,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T12:20:30.684001384Z",
-     "start_time": "2024-10-18T12:20:30.636821109Z"
+     "end_time": "2024-10-18T14:32:54.525505520Z",
+     "start_time": "2024-10-18T14:32:54.487558152Z"
     }
    },
    "id": "88afa5aff6a1a6d0"
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "outputs": [],
    "source": [
     "def build_graph_laplacian(actors):\n",
@@ -307,15 +253,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T12:20:30.684144905Z",
-     "start_time": "2024-10-18T12:20:30.636898766Z"
+     "end_time": "2024-10-18T14:32:54.525672485Z",
+     "start_time": "2024-10-18T14:32:54.487660632Z"
     }
    },
    "id": "be74ee92d3b0a06d"
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "outputs": [],
    "source": [
     "def build_augmented_information_state_vector(actors):\n",
@@ -343,9 +289,6 @@
     "    element_11 = I - alpha*L + np.diag(d)\n",
     "    element_12 = [-x for x in d]  \n",
     "    element_12_T = np.array(element_12).reshape(-1, 1)\n",
-    "    # element_12_T = np.array(d).reshape(-1, 1)\n",
-    "    # element_21 = np.zeros(N)  \n",
-    "    # element_22 = 1  \n",
     "    element_21 = np.zeros((1, N))\n",
     "    element_22 = np.array([[1]])\n",
     "    \n",
@@ -353,27 +296,21 @@
     "        [element_11, element_12_T], [element_21, element_22]\n",
     "    ])\n",
     "    \n",
-    "    #new_information_state_vector = np.matmul(H,information_states)\n",
-    "    #print(new_information_state_vector)\n",
-    "    # return new_information_state_vector\n",
     "    print(\"H = \", H)\n",
-    "    \n",
-    "    # return np.matmul(H,information_states)\n",
-    "    return H\n",
-    "# build_transition_information_states_matrix(agents)"
+    "    return H\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T12:20:30.684285014Z",
-     "start_time": "2024-10-18T12:20:30.639616362Z"
+     "end_time": "2024-10-18T14:32:54.526037263Z",
+     "start_time": "2024-10-18T14:32:54.487700562Z"
     }
    },
    "id": "3f79b8f7d2748f7c"
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "outputs": [],
    "source": [
     "def __cumulativeTransformer(p0:np.array)->np.array:\n",
@@ -400,22 +337,21 @@
     "    for i in range(len(p0)):\n",
     "        if (random_state < p[i]) and ((p[i] - p[i - 1]) > 0.0000001):\n",
     "            s = i\n",
-    "            break\n",
-    "            \n",
+    "            break           \n",
     "    return s\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T12:20:30.694785538Z",
-     "start_time": "2024-10-18T12:20:30.651879569Z"
+     "end_time": "2024-10-18T14:32:54.526214671Z",
+     "start_time": "2024-10-18T14:32:54.497186438Z"
     }
    },
    "id": "1ea77d57b65e2a62"
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "outputs": [],
    "source": [
     "class AgentController:\n",
@@ -433,10 +369,7 @@
     "            self.graph.plot_graph_with_agents(self.agents)\n",
     "            H_k = build_transition_information_states_matrix(self.agents)\n",
     "            actual_information_state_vector = build_augmented_information_state_vector(self.agents)\n",
-    "            # print(H_k.shape)\n",
-    "            # print(H_k)\n",
-    "            # print(actual_information_state_vector.shape)\n",
-    "            # print(actual_information_state_vector)\n",
+    "            \n",
     "            new_information_state_vector = np.matmul(H_k, actual_information_state_vector)\n",
     "            self.update_agents_position()\n",
     "            self.update_agents_information_state(new_information_state_vector[:-1, :])\n",
@@ -449,11 +382,7 @@
     "            for agent in self.agents:\n",
     "                stringa += (f\"Agent {agent.id_number}: \\n State trajectory: {str(agent.getTrajectory())} \\n Information state [k]:\"\n",
     "                            f\" {np.array(agent.getInformationStateTrajectory()).__str__()} \\n\\n\")\n",
-    "            # Scrivere ogni lista nel file\n",
     "            file.write(stringa)\n",
-    "            #np.array(agent.getInformationStateTrajectory()).__str__()\n",
-    "            print(\"fatto\")\n",
-    "            # file.write(\", \".join(map(str, lista1)) + \"\\n\")  # Converte i numeri in stringhe e li unisce con virgole\n",
     "            \n",
     "            # for _agent in self.agents:   \n",
     "            #     sum1 = 0\n",
@@ -478,21 +407,20 @@
     "    def update_agents_position(self):\n",
     "        for agent in self.agents:\n",
     "            actual_state = agent.getPosition()\n",
-    "            new_state = obtainState(P[actual_state, :])\n",
+    "            new_state = obtainState(P[actual_state].A1)\n",
     "            agent.updatePosition(new_state)\n",
     "\n",
     "    def update_agents_information_state(self, new_information_state):\n",
     "        for (i, information_state) in enumerate(new_information_state):\n",
     "            print(f\"(i, information_state) = ({i},{information_state})\")\n",
     "            self.agents[i].updateInformationState(information_state[0])\n",
-    "            # self.agents[i].updateInformationState(max(information_state[0],0))\n",
-    "        \n"
+    "            # self.agents[i].updateInformationState(max(information_state[0],0))\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T12:20:30.695012455Z",
-     "start_time": "2024-10-18T12:20:30.692729324Z"
+     "end_time": "2024-10-18T14:32:54.526809372Z",
+     "start_time": "2024-10-18T14:32:54.505313532Z"
     }
    },
    "id": "321981fbee05d4d6"
@@ -509,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "outputs": [
     {
      "data": {
@@ -1088,8 +1016,7 @@
       " [   1.        ]]\n",
       "(i, information_state) = (0,[-111.4815726])\n",
       "(i, information_state) = (1,[-83.9671562])\n",
-      "(i, information_state) = (2,[-193.0069329])\n",
-      "fatto\n"
+      "(i, information_state) = (2,[-193.0069329])\n"
      ]
     }
    ],
@@ -1100,8 +1027,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-18T12:20:32.419649359Z",
-     "start_time": "2024-10-18T12:20:30.692946688Z"
+     "end_time": "2024-10-18T14:32:56.714617230Z",
+     "start_time": "2024-10-18T14:32:54.523324332Z"
     }
    },
    "id": "1cfd91c6fb7708f4"
